fix(styling): fixes doxygen page headings
before there were two scrollbars visible in each heading on each doxygen page.

--- a/doxysphinx/resources/custom.scss
+++ b/doxysphinx/resources/custom.scss
@@ -47,6 +47,10 @@ html {
             #projectalign {
                 padding-left: 0 !important;
             }
+
+            table {
+                display: table
+            }
         }
 
         /* fix breadcrumb separator icon scaling */
